[package]
edition = "2021"
name = "easy_ast_napi"
version = "0.1.0"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
easy_ast_resolver = { version = "0.1.0", path = "../resolver" }