[package]
name = "easy_ast_visitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features=["rc"]}
serde_json = "1.0.107"
swc_parser = { version = "0.1.0", path = "../swc" }
easy_ast_error = { version = "0.1.0", path = "../error" }
easy_ast_visitor_import = { version = "0.1.0", path = "../visitor_import" }
easy_ast_resolver = { version = "0.1.0", path = "../resolver" }
easy_ast_visitor_base = { version = "0.1.0", path = "../visitor_base" }
