[package]
name = "easy_ast_visitor_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_parser = { version = "0.1.0", path = "../swc" }
easy_ast_error = { version = "0.1.0", path = "../error" }