[package]
name = "visitor_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_resolver = "0.2.0"
serde = {version = "1.0.188", features=["rc"]}
serde_json = "1.0.107"
swc_parser = { version = "0.1.0", path = "../swc" }
