[package]
name = "easy_ast_visitor_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.43"
quote = "1.0.33"
proc-macro2 = "1.0.71"
swc_parser = { version = "0.1.0", path = "../swc" }
easy_ast_error = { version = "0.1.0", path = "../error" }
easy_ast_visitor_base = { version = "0.1.0", path = "../visitor_base" }